<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#222222"
    android:id="@+id/SchermWrapper">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:touchscreenBlocksFocus="false"
        android:id="@+id/HeaderWrapper"
        android:weightSum="1"
        android:background="@drawable/app_header"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="265dp"
            android:layout_height="55dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/TitelText"
            android:textAlignment="center"
            android:textColor="#00AFEF"
            android:textIsSelectable="false"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_menu_string"
            android:id="@+id/SubtitelText"
            android:textAlignment="center"
            android:textColor="#00AFEF"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BottomWrapper"
        android:background="@drawable/app_border"
        android:layout_margin="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:id="@+id/OptionsWrapper">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_vertical|left"
                android:background="@drawable/options_button"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/OptionsLogo">

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/options_string"
                android:id="@+id/OptionsText"
                android:textColor="#00AFEF"
                android:textSize="25sp"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:onClick="musicMode"
            android:id="@+id/MusicModeWrapper">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_vertical|left"
                android:background="@drawable/music_mode_button"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/MusicModeLogo" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/music_mode_string"
                android:id="@+id/MusicModeText"
                android:textColor="#00AFEF"
                android:textSize="25sp"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:id="@+id/RunModeWrapper">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_vertical|left"
                android:background="@drawable/run_mode_button"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/RunModeLogo" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/run_mode_string"
                android:id="@+id/RunModeText"
                android:textColor="#00AFEF"
                android:textSize="25sp"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:id="@+id/StatisticsWrapper">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_vertical|left"
                android:background="@drawable/statistics_button"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/StatisticsLogo" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/statistics_string"
                android:id="@+id/StatisticsText"
                android:textColor="#00AFEF"
                android:textSize="25sp"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:id="@+id/FacebookWrapper">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_vertical|left"
                android:background="@drawable/facebook_button"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/FacebookLogo" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/facebook_string"
                android:id="@+id/FacebookText"
                android:textColor="#00AFEF"
                android:textSize="25sp"
                android:gravity="center_vertical" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>